--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,11 @@ h6 {
 }
 #main-nav .container {
     display: flex;
-    height: 70px;
+    height: var(--navbar-height);
     width: 100%;
     padding: 0 20px;
     align-items: center;
-    max-width: 1300px;
+    max-width: var(--max-width);
     margin: auto;
 }
 #main-nav .container::before {
@@ -53,7 +53,7 @@ h6 {
     width: 100%;
     height: 100%;
     background-color: var(--dark);
-    opacity: 0.6;
+    opacity: 0.4;
 }
 #main-nav .logo {
     flex: 6;
@@ -88,8 +88,9 @@ h6 {
 /* Showcase */
 #showcase {
     z-index: -1;
-    height: 55vh;
+    height: 65vh;
     min-height: 500px;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -109,17 +110,32 @@ h6 {
 }
 #showcase .container {
     z-index: 1;
-    padding: 2rem;
-    width: 40%;
     overflow: hidden;
+    max-width: var(--max-width);
+    height: calc(100% - var(--navbar-height));
+    position: relative;
+    top: var(--navbar-height);
+    margin: auto;
+}
+#showcase .showcase-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    padding: 0 20px;
 }
 #showcase .container h1 {
-    margin-top: 5px;
-    margin-bottom: 20px;
+    margin: 0 0 20px 0px;
     color: var(--secondary);
-    text-shadow: 2px 2px 2px #333;
+    text-shadow: 2px 2px 2px #222;
 }
 #showcase .container p {
-    /* text-align: justify; */
     margin-bottom: 30px;
+    padding: 10px;
+    background-color: rgba(51, 51, 51, 0.4);
+    box-shadow: 2px 2px 10px #333;
+}
+#showcase .container .category {
+    /* margin-left: 10px; */
 }
