--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ ul {
     list-style: none;
 }
 img {
-    height: 100%;
+    width: 100%;
 }
 h1,
 h2,
@@ -35,7 +35,12 @@ h6 {
     top: 0;
     z-index: 2;
 }
+#main-nav .logo img {
+    height: 100%;
+    width: auto;
+}
 #main-nav .container {
+    z-index: 0;
     display: flex;
     height: var(--navbar-height);
     width: 100%;
@@ -52,8 +57,8 @@ h6 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--dark);
-    opacity: 0.4;
+    background-color: #000;
+    opacity: 0.6;
 }
 #main-nav .logo {
     flex: 6;
@@ -87,26 +92,26 @@ h6 {
 
 /* Showcase */
 #showcase {
-    z-index: -1;
-    height: 65vh;
+    z-index: -2;
+    height: 70vh;
     min-height: 500px;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--dark);
+    background: url(../img/featured.jpg) no-repeat center center/cover;
     color: var(--light);
+    position: relative;
+    top: calc(var(--navbar-height) * -1);
+    /* We want the background to go behind navbar too */
 }
 #showcase::before {
-    z-index: -2;
+    z-index: -3;
     content: "";
-    background: url(../img/featured.jpg) no-repeat center center/cover;
+    background: var(--dark);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.35;
+    opacity: 0.7;
 }
 #showcase .container {
     z-index: 1;
@@ -136,6 +141,42 @@ h6 {
     background-color: rgba(51, 51, 51, 0.4);
     box-shadow: 2px 2px 10px #333;
 }
-#showcase .container .category {
-    /* margin-left: 10px; */
+
+/* Recipes */
+#recipes {
+    background-color: var(--light);
+    position: relative;
+    top: -40px;
+    /* Since #showcase starts at minus --navbar-height, we have to adjust the next section too */
+}
+#recipes .container {
+    margin: auto;
+    padding: 20px;
+    max-width: var(--max-width);
+    align-items: center;
+}
+#recipes .recipes-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1.5rem;
+}
+#recipes h2 {
+    margin-bottom: 10px;
+}
+#recipes h3,
+#recipes a {
+    color: var(--dark);
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+#recipes img {
+    height: 200px;
+    object-fit: cover;
+    border: 1px solid var(--grey);
+}
+#recipes .category {
+    margin-bottom: 0.3rem;
+}
+#recipes p {
+    margin-top: 5px;
 }
