--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,12 @@ input {
     font-size: 1rem;
 }
 
+/* Page: Index */
 /* Navbar */
 #main-nav {
+    z-index: 2;
     position: sticky;
     top: 0;
-    z-index: 2;
 }
 #main-nav .logo img {
     height: 100%;
@@ -47,12 +48,12 @@ input {
 #main-nav .container {
     z-index: 2;
     display: flex;
-    height: var(--navbar-height);
-    width: 100%;
-    padding: 0 20px;
     align-items: center;
+    height: var(--navbar-height);
     max-width: var(--max-width);
+    width: 100%;
     margin: auto;
+    padding: 0 20px;
 }
 #main-nav .container::before {
     z-index: -1;
@@ -98,14 +99,14 @@ input {
 /* Showcase */
 #showcase {
     z-index: 1;
+    position: relative;
+    top: calc(var(--navbar-height) * -1);
+    /* We want the background to go behind navbar too */
     height: 50vh;
     min-height: 500px;
     width: 100%;
     background: url(../img/featured.jpg) no-repeat center center/cover;
     color: var(--light);
-    position: relative;
-    top: calc(var(--navbar-height) * -1);
-    /* We want the background to go behind navbar too */
 }
 #showcase::before {
     z-index: -1;
@@ -120,12 +121,12 @@ input {
 }
 #showcase .container {
     z-index: 1;
-    overflow: hidden;
-    max-width: var(--max-width);
-    height: calc(100% - var(--navbar-height));
     position: relative;
     top: var(--navbar-height);
+    height: calc(100% - var(--navbar-height));
+    max-width: var(--max-width);
     margin: auto;
+    overflow: hidden;
 }
 #showcase .showcase-container {
     display: flex;
@@ -133,18 +134,18 @@ input {
     justify-content: center;
     width: 50%;
     height: 100%;
-    padding: 0 20px;
+    padding: 0 30px;
 }
 #showcase .container h1 {
-    margin: 0 0 20px 0px;
     color: var(--primary);
     text-shadow: 2px 2px 2px #222;
+    margin-bottom: 20px;
 }
 #showcase .container p {
-    margin-bottom: 30px;
-    padding: 10px;
     background-color: rgba(51, 51, 51, 0.4);
     box-shadow: 2px 2px 10px #333;
+    padding: 10px;
+    margin-bottom: 30px;
 }
 
 /* Recipes */
@@ -155,15 +156,15 @@ input {
     /* Since #showcase starts at minus --navbar-height, we have to adjust the next section too */
 }
 #recipes .container {
+    max-width: var(--max-width);
     margin: auto;
     padding: 30px;
-    max-width: var(--max-width);
     align-items: center;
 }
 #recipes .recipes-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 24px;
+    gap: var(--grid-gap);
 }
 #recipes h2 {
     margin-bottom: 10px;
@@ -173,7 +174,7 @@ input {
     color: var(--dark);
     font-size: 1.5rem;
     margin-bottom: 8px;
-    text-shadow: 2px 2px 1px rgba(153, 153, 153, 0.4);
+    text-shadow: 2px 2px 1px rgba(var(--light-shadow), 0.4);
 }
 #recipes p {
     margin-left: 1px;
@@ -195,10 +196,10 @@ input {
 #main-footer .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 24px;
+    gap: var(--grid-gap);
+    max-width: var(--max-width);
     padding: 32px 0 32px 32px;
     margin: auto;
-    max-width: var(--max-width);
     text-align: center;
 }
 #main-footer .container > *:last-child {
@@ -208,7 +209,7 @@ input {
     align-items: center;
     padding: 8px;
     margin-top: 20px;
-    margin-right: 24px;
+    margin-right: var(--grid-gap);
 }
 #main-footer .container img {
     height: 60px;
@@ -216,6 +217,7 @@ input {
 }
 #main-footer .container span a {
     color: var(--primary);
+    text-decoration: underline;
 }
 #main-footer .container h3 {
     margin-bottom: 15px;
@@ -227,4 +229,30 @@ input {
 }
 #main-footer .container input[type="submit"] {
     width: 50%;
+}
+
+/* Page: About */
+#about .container {
+    max-width: var(--max-width);
+    margin: 0 auto;
+    padding: 0 32px;
+    overflow: hidden;
+}
+#about .page-container {
+    margin: 50px 0;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    gap: var(--grid-gap);
+}
+#about .page-container > *:first-child {
+    grid-row: 1 / span 3;
+}
+#about .about-me img {
+    border-radius: 50%;
+    height: 200px;
+    width: auto;
+    display: block;
+    margin: auto;
+    border: 2px solid #fff;
+    box-shadow: 1px 1px 10px rgba(51, 51, 51, 0.5);
 }
