--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ input {
     position: relative;
     top: calc(var(--navbar-height) * -1);
     /* We want the background to go behind navbar too */
-    height: 50vh;
+    height: 60vh;
     min-height: 500px;
     width: 100%;
     background: url(../img/featured.jpg) no-repeat center center/cover;
@@ -124,9 +124,6 @@ input {
     position: relative;
     top: var(--navbar-height);
     height: calc(100% - var(--navbar-height));
-    max-width: var(--max-width);
-    margin: auto;
-    overflow: hidden;
 }
 #showcase .showcase-container {
     display: flex;
@@ -142,7 +139,7 @@ input {
     margin-bottom: 20px;
 }
 #showcase .container p {
-    background-color: rgba(51, 51, 51, 0.4);
+    background-color: rgba(var(--grey-shadow), 0.4);
     box-shadow: 2px 2px 10px #333;
     padding: 10px;
     margin-bottom: 30px;
@@ -152,19 +149,15 @@ input {
 #recipes {
     background-color: var(--light);
     position: relative;
-    top: -40px;
+    top: -70px;
     /* Since #showcase starts at minus --navbar-height, we have to adjust the next section too */
 }
 #recipes .container {
-    max-width: var(--max-width);
-    margin: auto;
     padding: 30px;
     align-items: center;
 }
-#recipes .recipes-container {
-    display: grid;
+#recipes .grid-container {
     grid-template-columns: repeat(3, 1fr);
-    gap: var(--grid-gap);
 }
 #recipes h2 {
     margin-bottom: 10px;
@@ -174,7 +167,7 @@ input {
     color: var(--dark);
     font-size: 1.5rem;
     margin-bottom: 8px;
-    text-shadow: 2px 2px 1px rgba(var(--light-shadow), 0.4);
+    text-shadow: 2px 2px 1px rgba(var(--light-shadow), 0.25);
 }
 #recipes p {
     margin-left: 1px;
@@ -185,7 +178,7 @@ input {
     border: 1px solid var(--grey);
 }
 #recipes .category {
-    margin-bottom: 3px;
+    margin-bottom: 4px;
 }
 
 /* Footer */
@@ -193,58 +186,46 @@ input {
     background-color: var(--dark);
     color: var(--light);
 }
-#main-footer .container {
-    display: grid;
+#main-footer .grid-container {
     grid-template-columns: repeat(3, 1fr);
-    gap: var(--grid-gap);
-    max-width: var(--max-width);
     padding: 32px 0 32px 32px;
-    margin: auto;
     text-align: center;
 }
-#main-footer .container > *:last-child {
+#main-footer .grid-container > *:last-child {
     background: var(--grey);
     grid-column: 1 / span 4;
-    text-align: center;
-    align-items: center;
     padding: 8px;
-    margin-top: 20px;
-    margin-right: var(--grid-gap);
+    margin-top: 20px 0 0 var(--grid-gap);
 }
-#main-footer .container img {
+#main-footer .grid-container img {
     height: 60px;
     width: auto;
 }
-#main-footer .container span a {
+#main-footer .grid-container span a {
     color: var(--primary);
     text-decoration: underline;
 }
-#main-footer .container h3 {
+#main-footer .grid-container h3 {
     margin-bottom: 15px;
 }
-#main-footer .container input[type="email"] {
+#main-footer .grid-container input[type="email"] {
     width: 90%;
     padding: 3px;
     margin: 15px 0;
 }
-#main-footer .container input[type="submit"] {
+#main-footer .grid-container input[type="submit"] {
     width: 50%;
 }
 
 /* Page: About */
 #about .container {
-    max-width: var(--max-width);
-    margin: 0 auto;
     padding: 0 32px;
-    overflow: hidden;
 }
-#about .page-container {
+#about .grid-container {
     margin: 50px 0;
-    display: grid;
     grid-template-columns: 4fr 2fr;
-    gap: var(--grid-gap);
 }
-#about .page-container > *:first-child {
+#about .grid-container > *:first-child {
     grid-row: 1 / span 3;
 }
 #about .about-me img {
@@ -253,6 +234,7 @@ input {
     width: auto;
     display: block;
     margin: auto;
-    border: 2px solid #fff;
-    box-shadow: 1px 1px 10px rgba(51, 51, 51, 0.5);
+    border: 2px solid var(--dark);
+    box-shadow: 1px 1px 10px rgba(var(--grey-shadow), 0.25);
+    margin-bottom: 10px;
 }
