--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Mukta:wght@400;700&display=swap");
-
-/* Global */
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-    font: 1rem "Mukta", sans-serif;
-    background-color: var(--light);
-}
-a {
-    text-decoration: none;
-    color: var(--light);
-}
-ul {
-    list-style: none;
-}
-img {
-    width: 100%;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Merienda", cursive;
-}
-input {
-    font-family: "Mukta", sans-serif;
-    font-size: 1rem;
-}
-
 /* Page: Index */
 /* Navbar */
 #main-nav {
@@ -70,6 +30,10 @@ input {
     height: 100%;
     background-color: #000;
     opacity: 0.6;
+}
+#main-nav a:hover {
+    color: var(--primary);
+    transition: color 0.1s ease-out;
 }
 #main-nav .logo {
     flex: 6;
@@ -178,6 +142,10 @@ input {
     height: 200px;
     object-fit: cover;
     border: 1px solid var(--grey);
+}
+#recipes img:hover {
+    opacity: 0.7;
+    transition: opacity 0.25s ease-out;
 }
 #recipes .category {
     margin-bottom: 4px;
