--- a/css/utilities.css
+++ b/css/utilities.css
@@ -2,6 +2,7 @@
 :root {
     --dark: #333;
     --grey: #5e5e5e;
+    --light-grey: #c5c5c5;
     --light: #f3f3f3;
     --primary: #a8bc77;
     --secondary: #bb4f2d;
@@ -32,7 +33,7 @@
     margin-bottom: 10px;
     font-size: 0.7rem;
     width: max-content;
-    box-shadow: 2px 2px 3px rgba(var(--grey-shadow), 0.2);
+    box-shadow: 2px 2px 2px rgba(var(--grey-shadow), 0.2);
 }
 .category-breakfast {
     background-color: var(--breakfast);
@@ -116,8 +117,36 @@
 .card h2 {
     font-size: 1.5rem;
 }
-.card p {
+.card p,
+.card ul {
     margin-bottom: 10px;
+}
+.card-img {
+    padding: 0;
+    margin: 0;
+}
+.card-img img {
+    height: 100%;
+    object-fit: cover;
+}
+/* Article Utilities */
+.meta {
+    background-color: var(--light-grey);
+    margin-bottom: 15px;
+    box-shadow: 2px 2px 10px rgba(var(--light-shadow), 0.6);
+}
+.meta small {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    letter-spacing: 1px;
+}
+.meta p,
+.meta i,
+.meta div {
+    display: inline;
+    margin: 0;
 }
 
 /* Lists */
