--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,10 @@ a {
 ul {
     list-style: none;
 }
+article ul {
+    list-style: circle;
+    list-style-position: inside;
+}
 img {
     width: 100%;
 }
