--- a/css/tablet.css
+++ b/css/tablet.css
@@ -56,12 +56,12 @@
 }
 
 /* Page: About */
-#about-blog .grid-container {
+#blog-article .grid-container {
     grid-template-columns: 1fr;
 }
-#about-blog .grid-container article {
+#blog-article .grid-container article {
     grid-row: 2 / span 3;
 }
-#about-blog .grid-container aside {
+#blog-article .grid-container aside {
     grid-row: 1 / span 1;
 }
