--- a/css/tablet.css
+++ b/css/tablet.css
@@ -55,13 +55,35 @@
     order: 4;
 }
 
-/* Page: About */
-#blog-article .grid-container {
+/* Grid Template (About, Article) */
+.grid-template .grid-container {
     grid-template-columns: 1fr;
 }
-#blog-article .grid-container article {
+
+/* Page: About */
+#about .grid-container article {
     grid-row: 2 / span 3;
 }
-#blog-article .grid-container aside {
+#about .grid-container aside {
     grid-row: 1 / span 1;
+}
+
+/* Page: Article */
+#article .grid-container {
+    grid-template-columns: 1fr 1.5fr;
+}
+#article .grid-container .card-img {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+}
+#article .grid-container article {
+    grid-column: 1 / span 2;
+}
+#article .about-me {
+    grid-row: 5 / span 1;
+    grid-column: 2 / span 1;
+}
+#article .about-categories {
+    grid-row: 5 / span 1;
+    grid-column: 1 / span 1;
 }
