--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Mukta:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 /* Global */
 * {
@@ -12,12 +12,12 @@ html {
 }
 body {
     min-height: 100%;
-    font: 1rem "Mukta", sans-serif;
-    background-color: var(--light);
+    font: 1.3rem "Nunito", sans-serif;
+    background-color: #f9f9f9;
 }
 a {
+    color: var(--primary);
     text-decoration: none;
-    color: var(--light);
 }
 ul {
     list-style: none;
@@ -29,15 +29,12 @@ article ul {
 img {
     width: 100%;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Merienda", cursive;
+.colored-button{
+    background-color: var(--primary);
+    color:#fff;
+    padding: 5px 10px;
+    border-radius: 8px;
 }
-input {
-    font-family: "Mukta", sans-serif;
-    font-size: 1rem;
+.focussed-text{
+    color:var(--primary);
 }
