--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 /* Page: Index */
 /* Navbar */
 #main-nav {
-    z-index: 2;
+    /* z-index: 2;
     position: sticky;
     top: 0;
+    opacity: 1; */
 }
 #main-nav .logo img {
     height: 100%;
@@ -11,6 +12,7 @@
     padding: 5px 3px;
 }
 #main-nav .container {
+    border-bottom: 1px solid #b1b1b1;
     z-index: 2;
     display: flex;
     align-items: center;
@@ -20,7 +22,7 @@
     margin: auto;
     padding: 0 20px;
 }
-#main-nav .container::before {
+/* #main-nav .container::before {
     z-index: -1;
     content: "";
     position: absolute;
@@ -30,14 +32,13 @@
     height: 100%;
     background-color: #000;
     opacity: 0.6;
-}
+} */
 #main-nav a:hover {
     color: var(--primary);
     transition: color 0.1s ease-out;
 }
 #main-nav .logo {
     flex: 6;
-    height: inherit;
 }
 #main-nav .links {
     display: flex;
@@ -66,18 +67,14 @@
 #showcase {
     z-index: 1;
     position: relative;
-    top: calc(var(--navbar-height) * -1);
-    /* We want the background to go behind navbar too */
-    height: 70vh;
-    min-height: 500px;
     width: 100%;
-    background: url(../img/featured.jpg) no-repeat center center/cover;
+    /* background: url(../img/featured.jpg) no-repeat center center/cover; */
     color: var(--light);
+    padding: 40px 0px;
 }
 #showcase::before {
     z-index: -1;
     content: "";
-    background: var(--dark);
     position: absolute;
     top: 0;
     left: 0;
@@ -86,36 +83,60 @@
     opacity: 0.6;
 }
 #showcase .container {
+    display: flex;
     z-index: 1;
     position: relative;
-    top: var(--navbar-height);
     height: calc(100% - var(--navbar-height));
 }
 #showcase .showcase-container {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 60%;
+    justify-content: center; */
+    width: 70%;
     height: 100%;
-    padding: 0 30px;
+    padding: 30px;
+}
+#showcase .image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+#showcase .image-container img{
+    /* background-image: url('../img/profile.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height:auto;
+    width: 50%;
+    border-radius: 5px; */
+    border-radius: 50%;
+    max-height: 20rem;
+    width: auto;
+    display: block;
+    margin: auto;
+    border: 2px solid var(--dark);
+    box-shadow: 1px 1px 10px rgba(var(--grey-shadow), 0.25);
 }
 #showcase .container h1 {
-    color: var(--primary);
-    text-shadow: 2px 2px 2px #222;
+    color: #333;
     margin-bottom: 20px;
 }
 #showcase .container p {
-    background-color: rgba(var(--grey-shadow), 0.4);
-    box-shadow: 2px 2px 10px #333;
     padding: 10px;
-    margin-bottom: 30px;
+    color:#555;
 }
 
+#showcase .container li {
+    padding: 10px;
+    color:#555;
+}
+#showcase .container li>span {
+    font-weight: bolder;
+}
 /* Recipes */
 #recipes {
     background-color: var(--light);
     position: relative;
-    top: -70px;
     /* Since #showcase starts at minus --navbar-height, we have to adjust the next section too */
 }
 #recipes .container {
