--- a/css/utilities.css
+++ b/css/utilities.css
@@ -4,7 +4,7 @@
     --grey: #5e5e5e;
     --light-grey: #c5c5c5;
     --light: #f3f3f3;
-    --primary: #a8bc77;
+    --primary: #e76c67;
     --secondary: #bb4f2d;
     --tertiary: #f4f0d0;
     --light-shadow: 153, 153, 153; /* for use in rgba(light-shadow, opacity) */
